--- a/public/partials/detalles.html
+++ b/public/partials/detalles.html
@@ -16,7 +16,7 @@
 				<li class="active">{{procedimientoSeleccionado.denominacion}}</li>
 				<li class="active">{{anualidad}}</li>
 			</ol>
-			<div class="col-lg-6">
+			<div class="col-lg-4">
 				<ul>
 					<li ng-repeat="attr in attrspar">
 						<strong>{{attr| translate}}</strong>
@@ -30,7 +30,17 @@
 					</li>
 				</ul>
 			</div>
-			<div class="col-lg-6 well">
+			<div class="col-lg-3 well" style="background-image:linear-gradient(to bottom,#fedede 0,#eeeeee 80%);">
+				<h5 class="text-danger">Responsables</h5>
+				<ul ng-repeat="responsable in responsables">
+					<li ng-repeat="attr in attrsresp">
+						<strong>{{attr| translate}}</strong>
+						<span>&nbsp;</span>
+						<a href="#" editable-text="responsable[attr]">{{ responsable[attr] || '-' }}</a>
+					</li>
+				</ul>
+			</div>
+			<div class="col-lg-5 well">
 				<div class="btn-group pull-right">
 					<div ng-click="detallesCarmHTML=true" ng-class="{'btn-danger':detallesCarmHTML,'btn-default':!detallesCarmHTML}" class="btn btn-default">
 						<span class="glyphicon glyphicon-list"></span>
@@ -43,8 +53,7 @@
 					</a>
 				</div>
 				<div class="procedimiento">
-					<h5 class="text-danger">Cargado desde carm.es
-					</h5>
+					<h5 class="text-danger">Cargado desde carm.es</h5>
 					<div ng-repeat="(key,val) in detallesCarm" style="clear:both" ng-bind-html="val |treatAsHTML" ng-class="{ 'hidden':!detallesCarmHTML }">
 					</div>
 					<div ng-repeat="(key,val) in detallesCarm2" style="clear:both" ng-class="{ 'hidden':detallesCarmHTML }">
@@ -65,7 +74,6 @@
 					<tbody>
 						<tr ng-repeat="attr in attrstabla"> 
 							<th>{{attr | translate}}</th>
-
 							<td ng-repeat="val in procedimientoSeleccionado.periodos[anualidad][attr] track by $index" class="numberCell">
 								<a href="#" editable-text="procedimientoSeleccionado.periodos[anualidad][attr][$index]" onaftersave="recalculate()" onbeforesave="checkNumber($data)">
 									{{ procedimientoSeleccionado.periodos[anualidad][attr][$index] || 0  |numberFormat}}
@@ -74,9 +82,7 @@
 						</tr>
 						<tr ng-repeat="attr in attrstablacalculados"> 
 							<th>{{attr | translate}}</th>
-
-							<td ng-repeat="val in procedimientoSeleccionado.periodos[anualidad][attr] track by $index" ng-class="{'text-danger': val&lt;0 }" class="numberCell">{{val | numberFormat}}
-							</td>
+							<td ng-repeat="val in procedimientoSeleccionado.periodos[anualidad][attr] track by $index" ng-class="{'text-danger': val&lt;0 }" class="numberCell">{{val | numberFormat}}</td>
 						</tr>
 					</tbody>
 				</table>
@@ -85,8 +91,7 @@
 				<div class="col-md-12">
 					<div class="btn-group pull-right">
 						<div ng-click="graficasgrandes=!graficasgrandes" class="btn btn-default">
-							<span ng-class="{'glyphicon-resize-full':!graficasgrandes,'glyphicon-resize-small':graficasgrandes}" class="glyphicon">
-							</span>
+							<span ng-class="{'glyphicon-resize-full':!graficasgrandes,'glyphicon-resize-small':graficasgrandes}" class="glyphicon"></span>
 						</div>
 						<div ng-click="graficasbarras=!graficasbarras" ng-class="{active:graficasbarras, 'btn-default':!graficabarras}" class="btn">
 							<span class="glyphicon glyphicon-stats"></span>
@@ -101,52 +106,49 @@
 					</nvd3-line-chart>
 				</div>
 				<div ng-repeat="graph in graphs" ng-if="graficasbarras &amp;&amp; graph.data &amp;&amp; !graficasgrandes" ng-class="{'col-lg-3':(numgraphs%4==0),'col-lg-3':(numgraphs%3==0)}" class="col-md-6 well">
-					<h5 class="text-danger text-center">{{graph.caption}}
-					</h5>
+					<h5 class="text-danger text-center">{{graph.caption}}</h5>
 					<nvd3-multi-bar-chart noData="No hay datos que mostrar" data="graph.data" showXAxis="true" showYAxis="true" showLegend="true" interactive="true" height="350" xAxisTickValues="xAxisTickValuesFunction()" xAxisTickFormat="xAxisTickFormatFunction()" rotateLabels="45" forcey="graph.forcey">
 						<svg>
 						</svg>
 					</nvd3-multi-bar-chart>
 				</div>
 				<div ng-repeat="graph in graphs" ng-if="!graficasbarras &amp;&amp; graph.data &amp;&amp; graficasgrandes" style="clear:both" class="col-lg-12 well">
-					<h5 class="text-danger text-center">{{graph.caption}}
-					</h5>
+					<h5 class="text-danger text-center">{{graph.caption}}</h5>
 					<nvd3-line-chart previous="nvd3-multi-bar-chart" noData="No hay datos que mostrar" data="graph.data" showXAxis="true" showYAxis="true" showLegend="true" interactive="true" height="350" xAxisTickValues="xAxisTickValuesFunction()" xAxisTickFormat="xAxisTickFormatFunction()" rotateLabels="45" forcey="graph.forcey">
 						<svg>
 						</svg>
 					</nvd3-line-chart>
 				</div>
 				<div ng-repeat="graph in graphs" ng-if="graficasbarras &amp;&amp; graph.data &amp;&amp; graficasgrandes" style="clear:both" class="col-lg-12 well">
-					<h5 class="text-danger text-center">{{graph.caption}}
-					</h5>
+					<h5 class="text-danger text-center">{{graph.caption}}</h5>
 					<nvd3-multi-bar-chart previous="nvd3-multi-bar-chart" noData="No hay datos que mostrar" data="graph.data" showXAxis="true" showYAxis="true" showLegend="true" interactive="true" height="350" xAxisTickValues="xAxisTickValuesFunction()" xAxisTickFormat="xAxisTickFormatFunction()" rotateLabels="45" forcey="graph.forcey">
 						<svg>
 						</svg>
 					</nvd3-multi-bar-chart>
 				</div>
-		</div>
-		<hr/>
-		<h5 class="text-danger">Incidencias</h5>
-		<div ng-repeat="inconsistencia in inconsistencias" role="alert" ng-if="inconsistencia.datos.length&gt;0" class="alert alert-warning">
-			<span>{{inconsistencia.titulo}}</span>
-		</div>
-		<div class="table-resposive">
-			<table class="table table-striped table-bordered">
-				<thead>
-					<tr>
-						<th></th>
-						<th ng-repeat="mes in meses">{{mes}}</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr ng-repeat="(incumplimiento,valores) in procedimientoSeleccionado.periodos[anualidad].Incidencias"> 
-						<th>{{incumplimiento}}</th>
-						<td ng-repeat="val in valores track by $index" ng-class="{'text-danger': val }" class="numberCell">{{val}}</td>
-					</tr>
-				</tbody>
-			</table>
+			</div>
+			<hr/>
+			<h5 class="text-danger">Incidencias</h5>
+			<div ng-repeat="inconsistencia in inconsistencias" role="alert" ng-if="inconsistencia.datos.length&gt;0" class="alert alert-warning">
+				<span>{{inconsistencia.titulo}}</span>
+			</div>
+			<div class="table-resposive">
+				<table class="table table-striped table-bordered">
+					<thead>
+						<tr>
+							<th></th>
+							<th ng-repeat="mes in meses">{{mes}}</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="(incumplimiento,valores) in procedimientoSeleccionado.periodos[anualidad].Incidencias"> 
+							<th>{{incumplimiento}}</th>
+							<td ng-repeat="val in valores track by $index" ng-class="{'text-danger': val }" class="numberCell">{{val}}</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 		</div>
 	</div>
-	</div>
-	</div>
-	<hr class="clear"/>
+</div>
+<hr class="clear"/>
