--- a/public/partials/incoherencias.html
+++ b/public/partials/incoherencias.html
@@ -1,1 +1,75 @@
-<div class="row"><div class="col-lg-12"><h1 class="text-danger">Incoherencias</h1><p>Parte de las incoherencias encontradas entre el excel y la Cartera de Servicios y Procedimientos.</p><form class="col-lg-12 well hidden"><div class="form-group"><input id="mostrartodos" type="checkbox" ng-model="mostrartodos" value="1" ng-checked="true"/><label for="mostrartodos">Mostrar todos</label></div></form><img src="/imgs/loading.gif" ng-if="!idsencomun || idsencomun.length==0"/><div ng-if="idsencomun &amp;&amp; idsencomun.length!=0" class="table-resposive col-lg-12"><table class="table table-striped table-bordered table-hover table-condensed"><thead><tr><th>ID</th><th colspan="{{camposexcel.length +2 }}" class="text-center">Excel</th><th colspan="{{camposguia.length + 2 }}" class="text-center"> Web</th></tr><tr><th></th><th>Denominación</th><th ng-repeat="c in camposexcel" class="text-center">{{c}}</th><th>Jerarquía</th><th>Denominación</th><th ng-repeat="c in camposguia" class="text-center">{{c}}</th><th>Jerarquía</th></tr></thead><tbody><tr ng-repeat="(k,val) in idsencomun |orderBy:'val.id'" ng-class="{'danger': !val.guiacarm || !val.procedimiento || !val.crawled,'info': testwarning(val) }"><th> <span ng-class="{'label-danger':!val.procedimiento || parseInt(val.procedimiento.totalsolicitudes)==0,'label-warning':!val.guiacarm, 'label-default': val.procedimiento &amp;&amp; val.guiacarm }" class="label"> <a ng-if="val.procedimiento" href="/procedimiento/{{val.id}}">{{val.id}}</a><span ng-if="!val.procedimiento">{{val.id}}</span></span></th><td><div class="pull-right"><span ng-if="val.procedimiento" class="badge">{{val.procedimiento ? val.procedimiento.totalsolicitudes : 0}}</span></div><span>{{val.procedimiento ? val.procedimiento['DENOMINACION DEL PROCEDIMIENTO'] :''}}</span></td><td ng-repeat="c in camposexcel" class="text-center">{{val.procedimiento ? val.procedimiento[c] : '' }}</td><td style="font-size:smaller"><ul ng-if="val.procedimiento"><li><strong>{{val.procedimiento['Codigo Nivel 3']}}</strong><span> {{val.procedimiento['Denominacion Nivel 3']}}</span></li><li><strong>{{val.procedimiento['Codigo Nivel 2']}}</strong><span> {{val.procedimiento['Denominacion Nivel 2']}}</span></li><li><strong>{{val.procedimiento['Codigo Nivel 1']}}</strong><span> {{val.procedimiento['Denominacion Nivel 1']}}</span></li></ul></td><td><a target="_blank" href="https://www.carm.es/web/pagina?IDTIPO=240&amp;IDCONTENIDO={{val.id}}">{{val.guiacarm ? val.guiacarm.titulo :''}}</a></td><td ng-repeat="c in camposguia" class="text-center">{{val.crawled &&val.crawled.any? val.crawled.any[c] : '' }}</td><td style="font-size:smaller"><ul ng-if="val.crawled"><li ng-repeat="j in val.crawled.jerarquia">{{j}}</li></ul></td></tr></tbody></table></div></div></div>
+<div class="row">
+	<div class="col-lg-12">
+		<h1 class="text-danger">Incoherencias</h1>
+		<p>Parte de las incoherencias encontradas entre SICI y la Cartera de Servicios y Procedimientos.</p>
+		<form class="col-lg-12 well hidden">
+			<div class="form-group">
+				<input id="mostrartodos" type="checkbox" ng-model="mostrartodos" value="1" ng-checked="true"/>
+				<label for="mostrartodos">Mostrar todos</label>
+			</div>
+		</form>
+		<img src="/imgs/loading.gif" ng-if="!idsencomun || idsencomun.length==0"/>
+		<div ng-if="idsencomun &amp;&amp; idsencomun.length!=0" class="table-resposive col-lg-12">
+			<table class="table table-striped table-bordered table-hover table-condensed">
+				<thead>
+					<tr>
+						<th>ID</th>
+						<th colspan="{{camposexcel.length + 2 }}" class="text-center">SICI</th>
+						<th colspan="{{camposguia.length  + 2 }}" class="text-center"> Web</th>
+					</tr>
+					<tr>
+						<th></th>
+						<th>Denominación</th>
+						<th ng-repeat="c in camposexcel" class="text-center">{{c}}</th>
+						<th>Jerarquía</th>
+						<th>Denominación</th>
+						<th ng-repeat="c in camposguia" class="text-center">{{c}}</th>
+						<th>Jerarquía</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr ng-repeat="(k,val) in idsencomun |orderBy:'val.id'" ng-class="{'danger': !val.guiacarm || !val.procedimiento || !val.crawled,'info': testwarning(val) }">
+						<th>
+							<span class="label" ng-class="{'label-danger':!val.procedimiento || parseInt(val.procedimiento.totalsolicitudes)==0,'label-warning':!val.guiacarm, 'label-default': val.procedimiento &amp;&amp; val.guiacarm }">
+								<a ng-if="val.procedimiento" href="/procedimiento/{{val.id}}">{{val.id}}</a>
+								<span ng-if="!val.procedimiento">{{val.id}}</span>
+							</span>
+						</th>
+						<td>
+							<div class="pull-right">
+								<span ng-if="val.procedimiento" class="badge">{{val.procedimiento ? val.procedimiento.totalsolicitudes : 0}}</span>
+							</div>
+							<span>{{val.procedimiento ? val.procedimiento.denominacion :''}}</span>
+						</td>
+						<td ng-repeat="c in camposexcel" class="text-center">{{val.procedimiento ? val.procedimiento[c] : '' }}</td>
+						<td style="font-size:smaller">
+							<ul ng-if="val.procedimiento">
+								<li>
+									<strong>{{val.procedimiento['Codigo Nivel 3']}}</strong>
+									<span> {{val.procedimiento['Denominacion Nivel 3']}}</span>
+								</li>
+								<li>
+									<strong>{{val.procedimiento['Codigo Nivel 2']}}</strong>
+									<span> {{val.procedimiento['Denominacion Nivel 2']}}</span>
+								</li>
+								<li>
+									<strong>{{val.procedimiento['Codigo Nivel 1']}}</strong>
+									<span> {{val.procedimiento['Denominacion Nivel 1']}}</span>
+								</li>
+							</ul>
+						</td>
+						<td>
+							<a target="_blank" href="https://www.carm.es/web/pagina?IDTIPO=240&amp;IDCONTENIDO={{val.id}}">{{val.guiacarm ? val.guiacarm.titulo :''}}</a>
+						</td>
+						<td ng-repeat="c in camposguia" class="text-center">{{val.crawled && val.crawled.any? val.crawled.any[c] : '' }}</td>
+						<td style="font-size:smaller">
+							<ul ng-if="val.crawled">
+								<li ng-repeat="j in val.crawled.jerarquia">{{j}}</li>
+							</ul>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
