--- a/public/partials/detalles.html
+++ b/public/partials/detalles.html
@@ -142,7 +142,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="(incumplimiento,valores) in procedimientoSeleccionado.periodos[anualidad].Incidencias"> 
+						<tr ng-repeat="(incumplimiento,valores) in procedimientoSeleccionado.periodos[anualidad].incidencias"> 
 							<th>{{incumplimiento}}</th>
 							<td ng-repeat="val in valores track by $index" ng-class="{'text-danger': val }" class="numberCell">{{val}}</td>
 						</tr>
