--- a/public/partials/detalles.html
+++ b/public/partials/detalles.html
@@ -5,14 +5,11 @@
 			<hr/>
 			<h4 class="text-danger">{{procedimientoSeleccionado.denominacion}}</h4>
 			<ol class="breadcrumb">
-			<!--
-				<li ng-if="procedimientoSeleccionado['Denominacion Nivel 3']">{{procedimientoSeleccionado["Denominacion Nivel 3"]}} 
+				<li ng-repeat="ancestro in procedimientoSeleccionado.ancestros">
+					<a href="/actividad/{{ancestro.id}}">
+						{{ancestro.nombre}}
+					</a>
 				</li>
-				<li ng-if="procedimientoSeleccionado['Denominacion Nivel 2']">{{procedimientoSeleccionado["Denominacion Nivel 2"]}} 
-				</li>
-				<li ng-if="procedimientoSeleccionado['Denominacion Nivel 1']">{{procedimientoSeleccionado["Denominacion Nivel 1"]}} 
-				</li>
-			-->
 				<li class="active">{{procedimientoSeleccionado.denominacion}}</li>
 				<li class="active">{{anualidad}}</li>
 			</ol>
@@ -35,8 +32,7 @@
 				<ul ng-repeat="responsable in responsables">
 					<li ng-repeat="attr in attrsresp">
 						<strong>{{attr| translate}}</strong>
-						<span>&nbsp;</span>
-						<a href="#" editable-text="responsable[attr]">{{ responsable[attr] || '-' }}</a>
+						<span>&nbsp; {{ responsable[attr] || '-' }}</span>
 					</li>
 				</ul>
 			</div>
@@ -53,7 +49,7 @@
 					</a>
 				</div>
 				<div class="procedimiento">
-					<h5 class="text-danger">Cargado desde carm.es</h5>
+					<h5 class="text-danger">Detalles según la guía</h5>
 					<div ng-repeat="(key,val) in detallesCarm" style="clear:both" ng-bind-html="val |treatAsHTML" ng-class="{ 'hidden':!detallesCarmHTML }">
 					</div>
 					<div ng-repeat="(key,val) in detallesCarm2" style="clear:both" ng-class="{ 'hidden':detallesCarmHTML }">
@@ -128,11 +124,7 @@
 				</div>
 			</div>
 			<hr/>
-			<h5 class="text-danger">Inconsistencias</h5>
-			<p>Una inconsistencia se da cuando alguno de los datos introducidos no refleja valores coherentes con el resto. Así, por ejemplo, no es consistente que haya un número negativo de expedientes resueltos, ni que el número de expedientes resueltos sea superior al de expedientes solicitados.</p>
-			<div ng-repeat="inconsistencia in inconsistencias" role="alert" ng-if="inconsistencia.datos.length&gt;0" class="alert alert-warning">
-				<span>{{inconsistencia.titulo}}</span>
-			</div>
+			<h5 class="text-danger">Incidencias</h5>
 			<div class="table-resposive">
 				<table class="table table-striped table-bordered">
 					<thead>
@@ -142,13 +134,21 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="(incumplimiento,valores) in procedimientoSeleccionado.periodos[anualidad].incidencias"> 
-							<th>{{incumplimiento}}</th>
+						<tr ng-repeat="(incidencia,valores) in procedimientoSeleccionado.periodos[anualidad].incidencias"> 
+							<th>{{incidencia}}</th>
 							<td ng-repeat="val in valores track by $index" ng-class="{'text-danger': val }" class="numberCell">{{val}}</td>
 						</tr>
 					</tbody>
 				</table>
 			</div>
+
+			<hr/>
+			<h5 class="text-danger" ng-If="inconsistencias.length>0">Inconsistencias</h5>
+			<p ng-If="inconsistencias.length>0">Una inconsistencia se da cuando alguno de los datos introducidos no refleja valores coherentes con el resto. Así, por ejemplo, no es consistente que haya un número negativo de expedientes resueltos, ni que el número de expedientes resueltos sea superior al de expedientes solicitados.</p>
+			<div ng-repeat="inconsistencia in inconsistencias" role="alert" ng-if="inconsistencia.datos.length > 0" class="alert alert-warning">
+				<span>{{inconsistencia.titulo}}</span>
+			</div>
+
 		</div>
 	</div>
 </div>
