--- a/public/partials/actividad.html
+++ b/public/partials/actividad.html
@@ -1,6 +1,6 @@
 
 <div ng-controller="ActividadCtrl" class="row">
-	<div ng-class="{'col-lg-4': !oculto, 'hidden': oculto}" class="left animated">
+	<div ng-class="{'col-lg-5': !oculto, 'hidden': oculto}" class="left animated">
 		<div class="panel panel-danger">
 			<div class="panel-heading">
 				<h3 class="panel-title">
@@ -10,41 +10,51 @@
 			<div class="panel-body">			
 				<input type="text" ng-model="texto.$" placeholder="Filtro" style="margin-bottom:1em" class="form-control"/>
 				<ul ng-if="arbol.length" style="padding-left:0.6em">
-					<li ng-repeat="element in arbol |filter:texto| filter:filtrojerarquia	">
+					<li ng-repeat="element in arbol |filter:texto| filter:filtrojerarquia" ng-class="{'list-group-item-warning':element.id==seleccionado.id}">
+						<p>
 						<strong>
 							[{{element.id}}] &nbsp;
 						</strong>
-						<span ng-class="{'bg-danger':element.id==seleccionado.id }" ng-click="setSeleccionado(element)" class="cursor"  title="Engloba {{element.numprocedimientos}} procedimientos">
+						<span ng-click="setSeleccionado(element)" class="cursor"  title="Engloba {{element.numprocedimientos}} procedimientos">
 							{{element.title}} 
 						</span>
-						<ul ng-if="element.nodes">
-							<li ng-repeat="elemen in element.nodes |filter:texto | filter:filtrojerarquia">
+						<span class="badge pull-right">{{element.numprocedimientos}}</span>
+						</p>
+						<ul class="list-group" ng-if="element.nodes" style="clear:both">
+							<li class="list-group-item" ng-repeat="elemen in element.nodes |filter:texto | filter:filtrojerarquia" ng-class="{'list-group-item-danger':elemen.id==seleccionado.id}">
+							<p>
 								<strong>
 									[{{elemen.id}}] &nbsp;
 								</strong>
-								<span ng-class="{'bg-danger':elemen.id==seleccionado.id }" ng-click="setSeleccionado(elemen)" class="cursor" title="Engloba {{elemen.numprocedimientos}} procedimientos">
+								<span ng-click="setSeleccionado(elemen)" class="cursor" title="Engloba {{elemen.numprocedimientos}} procedimientos">
 									{{elemen.title}} 
 								</span>
-								<ul ng-if="elemen.nodes">
-									<li ng-repeat="eleme in elemen.nodes |filter:texto |filter:filtrojerarquia">
+								<span class="badge pull-right">{{elemen.numprocedimientos}}</span>
+								</p>
+								<ul ng-if="elemen.nodes" style="clear:both">
+									<li ng-repeat="eleme in elemen.nodes |filter:texto |filter:filtrojerarquia"  ng-class="{'list-group-item-danger':eleme.id==seleccionado.id}" >
+									<p>
 										<strong>
 											[{{eleme.id}}] &nbsp;
 										</strong>
 										<span ng-class="{'bg-danger':eleme.id==seleccionado.id }" ng-click="setSeleccionado(eleme)" class="cursor" title="Engloba {{eleme.numprocedimientos}} procedimientos">
 											{{eleme.title}} 
 										</span>
-
-										<ul ng-if="eleme.nodes">
+										<span class="badge pull-right">{{eleme.numprocedimientos}}</span>
+										</p>
+										<ul ng-if="eleme.nodes" style="clear:both">
 											<li ng-repeat="elem in eleme.nodes |filter:texto |filter:filtrojerarquia">
+											<p>
 												<strong>
 													[{{elem.id}}] &nbsp;
 												</strong>
 												<span ng-class="{'bg-danger':elem.id==seleccionado.id }" ng-click="setSeleccionado(elem)" class="cursor"  title="Engloba {{elem.numprocedimientos}} procedimientos">
 													{{elem.title}} 
 												</span>
+												<span class="badge pull-right">{{elem.numprocedimientos}}</span>
+												</p>
 											</li>
 										</ul>
-
 									</li>
 								</ul>
 							</li>
@@ -54,7 +64,7 @@
 			</div>
 		</div>
 	</div>
-	<div ng-class="{'col-lg-8': !oculto, 'col-lg-12': oculto}" class="right animated">
+	<div ng-class="{'col-lg-7': !oculto, 'col-lg-12': oculto}" class="right animated">
 		<div ng-click="oculto=!oculto">
 			<span class="glyphicon glyphicon-fullscreen pull-right">
 			</span>
