Funcionalidad recalcular modelo

--- a/public/partials/actividad.html
+++ b/public/partials/actividad.html
@@ -64,7 +64,7 @@
 			</div>
 		</div>
 	</div>
-	<div ng-class="{'col-lg-7': !oculto, 'col-lg-12': oculto}" class="right animated">
+	<div ng-class="{'col-lg-7': !oculto, 'col-lg-12': oculto}" class="right animated" id="detallesjerarquia">
 		<div ng-click="oculto=!oculto">
 			<span class="glyphicon glyphicon-fullscreen pull-right">
 			</span>
