--- a/public/partials/recalculate.html
+++ b/public/partials/recalculate.html
@@ -1,19 +1,22 @@
 <div class="row">
 	<div class="col-lg-12">
-		<h3>Recalcular</h3>
+		<h3>Recalcular datos</h3>
 		<p>Esta funcionalidad está destinada a tareas de mantenimiento tras actualizaciones masivas de datos desde diversas fuentes.</p>
+		<p>Ayuda a mantener la coherencia del esquema de datos interno.</p>
 
-		<div class="panel panel-default">
-		  <div class="panel-heading">
-		    <h3 class="panel-title">Jerarquía</h3>
-		  </div>
-		  <div class="panel-body">
-			<button type="submit" class="btn btn-default" ng-click="recalcularjerarquia()">Recalcular</button>
-		  </div>
+		<div class="{{clasefuncionalidades}}" ng-repeat="funcionalidad in funcionalidades">
+			<div class="panel panel-danger">
+			  <div class="panel-heading">
+			    <h3 class="panel-title">{{funcionalidad.label}}</h3>
+			  </div>
+			  <div class="panel-body">
+			  	<div class="btn-group">
+					<button ng-class="{disabled: actualizando>0}" ng-repeat="fn in funcionalidad.fn" class="btn btn-default" ng-click="invoke(fn.cmd)">{{fn.label}}</button>
+				</div>
+			  </div>
+			</div>
 		</div>
-		
-
+		<div class="clear"></div>
 		<div class="alert {{respuesta.clase}}" role="alert" ng-repeat="respuesta in respuestas">{{respuesta.mensaje}}</div>
-
 	</div>
 </div>
