--- a/public/partials/actividad.html
+++ b/public/partials/actividad.html
@@ -105,8 +105,7 @@
 		<div>
 			{{filtrotxtprocedimiento.codigo}}
 		</div>
-		<div ng-if="procedimientosfiltrados.length">
-
+		<div ng-if="procedimientosfiltrados.length" class="table-responsive">
 			<table class="table table-striped table-bordered table-condensed table-hover" id="procedimientostable">
 				<thead>
 					<tr>
