--- a/public/partials/upload.html
+++ b/public/partials/upload.html
@@ -18,7 +18,7 @@
 		<button ng-If="actualizando" ng-click="upload.abort()">Cancelar subida</button>
 	</div>
 	<div style="margin-top:2em" class="col-lg-12">
-		<div ng-repeat="respuesta in respuestas" class="col-md-6 col-sm-6">
+		<div ng-repeat="respuesta in respuestas" class="col-lg-6 col-md-12 col-sm-12">
 			<div ng-class="{yellow:respuesta.avisos.length&gt;0 &amp;&amp; respuesta.errores.length==0,green:respuesta.avisos.length==0 &amp;&amp; respuesta.errores.length==0,red:respuesta.errores.length&gt;0 }" class="portlet box">
 				<div class="portlet-title">
 					<div class="caption">
@@ -57,7 +57,7 @@
 										{{output.mes}}
 									</td>
 									<td>
-										{{output.indicador}}
+										{{output.indicador | translate}}
 									</td>
 									<td class="numberCell">
 										{{output.valor}}
