Carga selectiva en actividad

--- a/public/partials/incoherencias.html
+++ b/public/partials/incoherencias.html
@@ -20,7 +20,7 @@
 					<tr>
 						<th></th>
 						<th>Denominación</th>
-						<th ng-repeat="c in camposexcel" class="text-center">{{c}}</th>
+						<th ng-repeat="c in camposexcel" class="text-center">{{c | translate}}</th>
 						<th>Jerarquía</th>
 						<th>Denominación</th>
 						<th ng-repeat="c in camposguia" class="text-center">{{c}}</th>
@@ -37,31 +37,26 @@
 						</th>
 						<td>
 							<div class="pull-right">
-								<span ng-if="val.procedimiento" class="badge">{{val.procedimiento ? val.procedimiento.totalsolicitudes : 0}}</span>
+								<span ng-if="val.procedimiento" class="badge">{{val.procedimiento ? val.procedimiento[anualidad].totalsolicitudes : 0}}</span>
 							</div>
 							<span>{{val.procedimiento ? val.procedimiento.denominacion :''}}</span>
 						</td>
 						<td ng-repeat="c in camposexcel" class="text-center">{{val.procedimiento ? val.procedimiento[c] : '' }}</td>
 						<td style="font-size:smaller">
-							<ul ng-if="val.procedimiento">
-								<li>
-									<strong>{{val.procedimiento['Codigo Nivel 3']}}</strong>
-									<span> {{val.procedimiento['Denominacion Nivel 3']}}</span>
-								</li>
-								<li>
-									<strong>{{val.procedimiento['Codigo Nivel 2']}}</strong>
-									<span> {{val.procedimiento['Denominacion Nivel 2']}}</span>
-								</li>
-								<li>
-									<strong>{{val.procedimiento['Codigo Nivel 1']}}</strong>
-									<span> {{val.procedimiento['Denominacion Nivel 1']}}</span>
+							<ul ng-if="val.procedimiento.ancestros">
+								<li ng-repeat="jerarquia in val.procedimiento.ancestros | reverse">
+									<strong>{{jerarquia.id}}</strong>
+									<span> {{jerarquia.nombrelargo}}</span>
 								</li>
 							</ul>
 						</td>
 						<td>
-							<a target="_blank" href="https://www.carm.es/web/pagina?IDTIPO=240&amp;IDCONTENIDO={{val.id}}">{{val.guiacarm ? val.guiacarm.titulo :''}}</a>
+						<td ng-repeat="c in camposguia" class="text-center">
+							<a target="_blank" href="https://www.carm.es/web/pagina?IDTIPO=240&amp;IDCONTENIDO={{val.id}}">
+								{{val.crawled && c.startsWith('any.') ? val.crawled[c.replace('any.','')] : 
+								(val.crawled ? val.crawled[c] : '') }}
+							</a>
 						</td>
-						<td ng-repeat="c in camposguia" class="text-center">{{val.crawled && val.crawled.any? val.crawled.any[c] : '' }}</td>
 						<td style="font-size:smaller">
 							<ul ng-if="val.crawled">
 								<li ng-repeat="j in val.crawled.jerarquia">{{j}}</li>
